fixes #154 change the spec.yaml to be in sync with published specification